<resources>
    <string name="app_name">CATCHUP</string>
    <string name="fetching_location">Fetching My Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="title_activity_maps">Map</string>
    <string name="logout">Logout</string>
    <string name="verified">Verified</string>
    <string name="choose_camera">Tap On Photo To Choose Profile Picture</string>
    <string name="name_hint">Enter Your Name</string>
    <string name="contact_hint">Contact</string>
    <string name="btn_save">Save</string>
    <string name="btn_add_schedule">Add Schedule</string>
    <string name="profile_image">Profile Picture</string>
    <string name="email_hint">User Email</string>
    <string name="password_hint">Password</string>
    <string name="login_hint">Login</string>
    <string name="signup_need">Don\'t have account? Sign Up</string>
    <string name="signin_need">Already have an account? Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="book">Book Now</string>
    <string name="clear">Clear Records</string>
    <string name="seat_map">View Seat Map</string>
    <string name="verified_Email">Email Verified</string>
    <string name="not_verified">Email Not Verified (Click to Verify)</string>
    <string name="Vemail_sent">Verification Email Sent</string>
    <string name="min_len_text">Minimum Length Of Password Should Be 6</string>
    <string name="require_password">Password Is Required</string>
    <string name="valid_email">Please Enter A Valid Email</string>
    <string name="require_email">Email Is Required</string>
    <string name="values_updated">Values Updated !</string>
    <string name="myLoc">My Location</string>
    <string name="settingbtn">Settings</string>
    <string name="permission_message">This app requires location permission to be granted and GPS Enabled.</string>
    <string name="cancel">Cancel</string>
    <string name="permission_title">Permission Not Granted!</string>
    <string name="bus">Bus</string>
    <string name="profile">User Profile</string>
    <string name="successfullyUploaded">Coordinates Uploaded to Server</string>
    <string name="share">Share Location!</string>
    <string name="dont_share">Stop Sharing!</string>
    <string name="schedule">View Bus Schedule</string>
    <string name="booking_info">Seat Booking Information</string>
    <string name="schedule_info">Bus Schedule Information</string>
    <string name="search_hint">Enter route number</string>
    <string name="app_label">Searching</string>
    <string name="my_booking">Find My Bookings</string>
</resources>
