<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="209dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/image170dp"
            android:layout_height="@dimen/image170dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/image_margin"
            android:background="@drawable/profile"
            android:contentDescription="@string/profile_image"
            android:scaleType="centerCrop" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="@dimen/std0.5_dp"
        android:text="@string/choose_camera"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginLeft="@dimen/std_dp"
        android:layout_marginRight="@dimen/std_dp"
        android:hint="@string/name_hint"
        android:background= "@drawable/textinput"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#B6B6B6"
        />


    <TextView
        android:id="@+id/textViewVerified"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center"
        android:text="@string/verified"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/button_top_margin"
        android:background="@drawable/rounded_button_solid"
        android:paddingLeft="@dimen/btn_padding"
        android:paddingRight="@dimen/btn_padding"
        android:textColor="#000000"
        android:text="@string/btn_save"
        android:textAllCaps="false" />


</LinearLayout>