<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context="com.MMW.Catchup.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="@dimen/std_dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="215dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/catchuplogo" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/std_dp">


                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background= "@drawable/textinput"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/std_dp"
                    android:textColor="#000000"
                    android:textSize="@dimen/std_sp" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/std0.5_dp"
                    android:background= "@drawable/textinput"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:padding="@dimen/std_dp"
                    android:textColor="#000000"
                    android:textSize="@dimen/std_sp" />

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/std0.5_dp"
                    android:background="@drawable/rounded_button_solid"
                    android:padding="@dimen/std_dp"
                    android:text="@string/login_hint"
                    android:textAllCaps="false"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textViewSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/std0.5_dp"
                    android:text="@string/signup_need"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>