<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:orientation="vertical"
    tools:context=".SignUpActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/ll_padding"
            android:paddingRight="@dimen/ll_padding">

            <Spinner
                android:id="@+id/userType"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/std0.5_dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingBottom="@dimen/std_dp"
                android:background= "@drawable/textinput"
                android:textColor="#000000"
                android:textColorHint="#BEBEBE" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/std0.5_dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/std_dp"
                android:background= "@drawable/textinput"
                android:textColor="#000000"
                android:textColorHint="#BEBEBE" />

            <Spinner
                android:id="@+id/busType"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/editBusNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/std0.5_dp"
                android:background= "@drawable/textinput"
                android:fontFamily="sans-serif"
                android:hint="Bus Number"
                android:inputType="textCapWords"
                android:paddingBottom="16dp"
                android:textColor="#000000"
                android:textColorHint="#BEBEBE"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/editRouteNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/std0.5_dp"
                android:fontFamily="sans-serif"
                android:hint="Route Number"
                android:inputType="number"
                android:paddingBottom="16dp"
                android:background= "@drawable/textinput"
                android:textColor="#000000"
                android:textColorHint="#BEBEBE"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/editOrigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/std0.5_dp"
                android:fontFamily="sans-serif"
                android:hint="Origin"
                android:inputType="text"
                android:paddingBottom="16dp"
                android:background= "@drawable/textinput"
                android:textColor="#000000"
                android:textColorHint="#BEBEBE"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/editDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/std0.5_dp"
                android:fontFamily="sans-serif"
                android:hint="Destination"
                android:inputType="text"
                android:paddingBottom="16dp"
                android:background= "@drawable/textinput"
                android:textColor="#000000"
                android:textColorHint="#BEBEBE"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/editRoadName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/std0.5_dp"
                android:fontFamily="sans-serif"
                android:hint="Road Name"
                android:inputType="textCapWords"
                android:paddingBottom="16dp"
                android:background= "@drawable/textinput"
                android:textColor="#000000"
                android:textColorHint="#BEBEBE"
                android:visibility="invisible" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_margin="@dimen/std0.5_dp"
                android:background="@drawable/rounded_button_solid"
                android:padding="@dimen/std_dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/std_dp"
                android:text="@string/signin_need"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#ffffff" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />


    </RelativeLayout>

</ScrollView>